force-app/main/default/objects/Order__c/Order__c.object-meta.xml
<CustomObject>
    <label>주문서</label>
    <nameField>
        <displayFormat>IT-{0000}</displayFormat>
        <label>Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>주문서</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>