force-app/main/default/objects/Order__c/fields/Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percent__c</fullName>
    <label>할인율</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>