force-app/main/default/objects/Order__c/fields/List_Product__c.field-meta.xml
<CustomField>
    <fullName>List_Product__c</fullName>
    <label>제품 리스트</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>