force-app/main/default/objects/Order__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>주문 날짜</label>
    <required>true</required>
    <type>Date</type>
</CustomField>