force-app/main/default/objects/Order__c/validationRules/Max20Percent.validationRule-meta.xml
<ValidationRule>
    <fullName>Max20Percent</fullName>
    <active>true</active>
    <description>할인율 20% 이상 수정되지 않게</description>
    <errorConditionFormula>Discount_Percent__c &gt; 0.20</errorConditionFormula>
    <errorDisplayField>Discount_Percent__c</errorDisplayField>
    <errorMessage>할인율은 최대 20% 입니다.</errorMessage>
</ValidationRule>