force-app/main/default/objects/Order__c/validationRules/Min0Percent.validationRule-meta.xml
<ValidationRule>
    <fullName>Min0Percent</fullName>
    <active>true</active>
    <description>할인율을 0 미만으로 수정할 때</description>
    <errorConditionFormula>Discount_Percent__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Discount_Percent__c</errorDisplayField>
    <errorMessage>할인율이 0% 미만 입니다</errorMessage>
</ValidationRule>